--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </div>
                     <span class="star">⭐️⭐️⭐️⭐️⭐️</span>
                 </div>
-                <p class="card-text">Codeloccol m'a donné les compétences techniques et la confiance nécessaire pour dévenir développeur. L'apprentissage par paire et l'accompagnement des coachs ont fait toute la différence dans mon parcours.</p>
+                <p class="card-text"><em>Codeloccol m'a donné les compétences techniques et la confiance nécessaire pour dévenir développeur. L'apprentissage par paire et l'accompagnement des coachs ont fait toute la différence dans mon parcours.</em></p>
             </div>
              <div class="card2">
                <div class="profile">
@@ -38,7 +38,7 @@
                     </div>
                     <span class="star">⭐️⭐️⭐️⭐️⭐️</span>
                 </div>
-                <p class="card-text">La méthode d'enseignement de Codeloccol est révolutionnaire. J'ai pu maîtriser HTML, CSS, Javascript et React en quelques mois grâce à la pratique intense.</p>
+                <p class="card-text"><em>La méthode d'enseignement de Codeloccol est révolutionnaire. J'ai pu maîtriser HTML, CSS, Javascript et React en quelques mois grâce à la pratique intense.</em></p>
             </div>
         </section>
         <section class="deuxième_partie">
@@ -53,7 +53,7 @@
                     </div>
                     <span class="star">⭐️⭐️⭐️⭐️⭐️</span>
                 </div>
-                <p class="card-text">Les projets pratiquer m'ont permis de construire un portofolio solide. Aujourd'hui je travaille sur des projet d'agritech et d'e-commerce grâce au base acquise ici.</p>
+                <p class="card-text"><em>Les projets pratiquer m'ont permis de construire un portofolio solide. Aujourd'hui je travaille sur des projet d'agritech et d'e-commerce grâce au base acquise ici.</em></p>
             </div>
              <div class="card4">
                <div class="profile">
@@ -66,7 +66,7 @@
                     </div>
                     <span class="star">⭐️⭐️⭐️⭐️⭐️</span>
                 </div>
-                <p class="card-text">De HTML/CSS à React Native & Flutter, Codeloccol m'a accompagné dans une progression logique et structurée. La communauté d'entraide est exceptionnel et m'a motivé tout au long du parcours.</p>
+                <p class="card-text"><em>De HTML/CSS à React Native & Flutter, Codeloccol m'a accompagné dans une progression logique et structurée. La communauté d'entraide est exceptionnel et m'a motivé tout au long du parcours.</em></p>
             </div>
         </section>
             <section class="première_partie">
@@ -81,7 +81,7 @@
                     </div>
                     <span class="star">⭐️⭐️⭐️⭐️⭐️</span>
                 </div>
-                <p class="card-text">Au dèlà du code, Codeloccol m'a appris la gestion de projet, Git, et les soft skills. Ces compétences me servent quotidiennement dans mon rôle de chef de projet.</p>
+                <p class="card-text"><em>Au dèlà du code, Codeloccol m'a appris la gestion de projet, Git, et les soft skills. Ces compétences me servent quotidiennement dans mon rôle de chef de projet.</em></p>
             </div>
              <div class="card6">
                <div class="profile">
@@ -94,7 +94,7 @@
                     </div>
                     <span class="star">⭐️⭐️⭐️⭐️⭐️</span>
                 </div>
-                <p class="card-text">Grâce à Codeloccol j'ai pu crée ma propre startup tech. La formation complète m'a donné tous les outils pour développer des solutions innovantes pour l'Afrique.</p>
+                <p class="card-text"><em>Grâce à Codeloccol j'ai pu crée ma propre startup tech. La formation complète m'a donné tous les outils pour développer des solutions innovantes pour l'Afrique.</em></p>
             </div>
         </section>
         <section class="Quatrième_partie">
