--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="Style.css">
     <title>Document</title>
 </head>
@@ -17,26 +18,26 @@
              <div class="card1">
                 <div class="profile">
                     <div class="info_text">
-                        <p class="photo1">K</p>
+                            <img class="photo1" src="images/undraw_deep-thinker-avatar_6xg6.svg" alt="">
                         <div>
                             <h3>Kina</h3>
                             <p>Développeur Full-stack</p>
                         </div>
                     </div>
-                    <span class="star">⭐️⭐️⭐️⭐️⭐️</span>
+                    <span class="star"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></span>
                 </div>
                 <p class="card-text"><em>Codeloccol m'a donné les compétences techniques et la confiance nécessaire pour dévenir développeur. L'apprentissage par paire et l'accompagnement des coachs ont fait toute la différence dans mon parcours.</em></p>
             </div>
              <div class="card2">
                <div class="profile">
                     <div class="info_text">
-                        <p class="photo2">M</p>
+                        <img class="photo1" src="images/undraw_deep-thinker-avatar_6xg6.svg" alt="">
                         <div>
                             <h3>Mahamadou</h3>
                             <p>Développeur Full-stack</p>
                         </div>
                     </div>
-                    <span class="star">⭐️⭐️⭐️⭐️⭐️</span>
+                    <span class="star"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></span>
                 </div>
                 <p class="card-text"><em>La méthode d'enseignement de Codeloccol est révolutionnaire. J'ai pu maîtriser HTML, CSS, Javascript et React en quelques mois grâce à la pratique intense.</em></p>
             </div>
@@ -45,26 +46,26 @@
                  <div class="card3">
                 <div class="profile">
                     <div class="info_text">
-                        <p class="photo2">I</p>
+                        <img class="photo1" src="images/undraw_deep-thinker-avatar_6xg6.svg" alt="">
                         <div>
-                            <h3>Ibrahim Djingarey</h3>
+                            <h3>Ibrahim</h3>
                             <p>Designer UX/UI</p>
                         </div>
                     </div>
-                    <span class="star">⭐️⭐️⭐️⭐️⭐️</span>
+                    <span class="star"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></span>
                 </div>
                 <p class="card-text"><em>Les projets pratiquer m'ont permis de construire un portofolio solide. Aujourd'hui je travaille sur des projet d'agritech et d'e-commerce grâce au base acquise ici.</em></p>
             </div>
              <div class="card4">
                <div class="profile">
                     <div class="info_text">
-                        <p class="photo4">Y</p>
+                        <img class="photo1" src="images/undraw_deep-thinker-avatar_6xg6.svg" alt="">
                         <div>
                             <h3>Yacoubou</h3>
-                            <p>Développeur Front-end & Mobile</p>
+                            <p>Développeur Front-end</p>
                         </div>
                     </div>
-                    <span class="star">⭐️⭐️⭐️⭐️⭐️</span>
+                    <span class="star"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></span>
                 </div>
                 <p class="card-text"><em>De HTML/CSS à React Native & Flutter, Codeloccol m'a accompagné dans une progression logique et structurée. La communauté d'entraide est exceptionnel et m'a motivé tout au long du parcours.</em></p>
             </div>
@@ -73,26 +74,26 @@
              <div class="card5">
                 <div class="profile">
                     <div class="info_text">
-                        <p class="photo5">MR</p>
+                        <img class="photo1" src="images/undraw_deep-thinker-avatar_6xg6.svg" alt="">
                         <div>
                             <h3>Mariam</h3>
                             <p>Chef de projet Tech</p>
                         </div>
                     </div>
-                    <span class="star">⭐️⭐️⭐️⭐️⭐️</span>
+                    <span class="star"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></span>
                 </div>
                 <p class="card-text"><em>Au dèlà du code, Codeloccol m'a appris la gestion de projet, Git, et les soft skills. Ces compétences me servent quotidiennement dans mon rôle de chef de projet.</em></p>
             </div>
              <div class="card6">
                <div class="profile">
                     <div class="info_text">
-                        <p class="photo6">H</p>
+                        <img class="photo1" src="images/undraw_deep-thinker-avatar_6xg6.svg" alt="">
                         <div>
                             <h3>Haoua</h3>
                             <p>Entreprenneuse Tech</p>
                         </div>
                     </div>
-                    <span class="star">⭐️⭐️⭐️⭐️⭐️</span>
+                    <span class="star"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></span>
                 </div>
                 <p class="card-text"><em>Grâce à Codeloccol j'ai pu crée ma propre startup tech. La formation complète m'a donné tous les outils pour développer des solutions innovantes pour l'Afrique.</em></p>
             </div>
@@ -101,13 +102,13 @@
             <div class="card7">
                <div class="profile">
                     <div class="info_text">
-                        <p class="photo7">Ya</p>
+                        <img class="photo1" src="images/undraw_deep-thinker-avatar_6xg6.svg" alt="">
                         <div>
                             <h3>Yacouba</h3>
                             <p>Entreprenneur Tech</p>
                         </div>
                     </div>
-                    <span class="star">⭐️⭐️⭐️⭐️⭐️</span>
+                    <span class="star"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></span>
                 </div>
             </div>
         </section>    
