--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
              <div class="card2">
                <div class="profile">
                     <div class="info_text">
-                        <img class="photo1" src="images/undraw_deep-thinker-avatar_6xg6.svg" alt="">
+                        <img class="photo1" src="images/img2.svg" alt="">
                         <div>
                             <h3>Mahamadou</h3>
                             <p>Développeur Full-stack</p>
@@ -46,7 +46,7 @@
                  <div class="card3">
                 <div class="profile">
                     <div class="info_text">
-                        <img class="photo1" src="images/undraw_deep-thinker-avatar_6xg6.svg" alt="">
+                        <img class="photo1" src="images/img3.svg" alt="">
                         <div>
                             <h3>Ibrahim</h3>
                             <p>Designer UX/UI</p>
@@ -59,7 +59,7 @@
              <div class="card4">
                <div class="profile">
                     <div class="info_text">
-                        <img class="photo1" src="images/undraw_deep-thinker-avatar_6xg6.svg" alt="">
+                        <img class="photo1" src="images/img6.svg" alt="">
                         <div>
                             <h3>Yacoubou</h3>
                             <p>Développeur Front-end</p>
@@ -74,7 +74,7 @@
              <div class="card5">
                 <div class="profile">
                     <div class="info_text">
-                        <img class="photo1" src="images/undraw_deep-thinker-avatar_6xg6.svg" alt="">
+                        <img class="photo1" src="images/img5.svg" alt="">
                         <div>
                             <h3>Mariam</h3>
                             <p>Chef de projet Tech</p>
@@ -87,7 +87,7 @@
              <div class="card6">
                <div class="profile">
                     <div class="info_text">
-                        <img class="photo1" src="images/undraw_deep-thinker-avatar_6xg6.svg" alt="">
+                        <img class="photo1" src="images/img4.svg" alt="">
                         <div>
                             <h3>Haoua</h3>
                             <p>Entreprenneuse Tech</p>
@@ -102,7 +102,7 @@
             <div class="card7">
                <div class="profile">
                     <div class="info_text">
-                        <img class="photo1" src="images/undraw_deep-thinker-avatar_6xg6.svg" alt="">
+                        <img class="photo1" src="images/img7.svg" alt="">
                         <div>
                             <h3>Yacouba</h3>
                             <p>Entreprenneur Tech</p>
